--- a/app/src/main/res/navigation/nav_graph.xml
+++ b/app/src/main/res/navigation/nav_graph.xml
@@ -27,7 +27,11 @@
         android:id="@+id/movieDetailsFragment"
         android:name="com.eslam.moviesapp.ui.movie.MovieDetailsFragment"
         android:label="fragment_movie_details"
-        tools:layout="@layout/fragment_movie_details" />
+        tools:layout="@layout/fragment_movie_details" >
+        <argument
+            android:name="movie"
+            app:argType="com.eslam.moviesapp.domain.models.Movie" />
+    </fragment>
     <fragment
         android:id="@+id/movieSearchFragment"
         android:name="com.eslam.moviesapp.ui.search.MovieSearchFragment"
