--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -16,7 +16,7 @@
 
 
     <androidx.fragment.app.FragmentContainerView
-        android:id="@+id/news_nav"
+        android:id="@+id/movies_nav"
         android:layout_width="match_parent"
         android:layout_height="0dp"
         app:layout_constraintTop_toTopOf="parent"
