--- a/app/src/main/res/layout/favorite_item.xml
+++ b/app/src/main/res/layout/favorite_item.xml
@@ -54,6 +54,7 @@
             tools:text="Action"/>
 
         <TextView
+            android:id="@+id/movie_year"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             app:layout_constraintTop_toBottomOf="@id/fav_gener"
