--- a/app/src/main/res/layout/gener_layout.xml
+++ b/app/src/main/res/layout/gener_layout.xml
@@ -1,9 +1,12 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.cardview.widget.CardView
+    xmlns:android="http://schemas.android.com/apk/res/android"
+    android:id="@+id/genre_container"
     android:layout_width="wrap_content"
-    android:layout_height="20dp"
+    android:layout_height="25dp"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
+
     app:cardCornerRadius="5dp"
     android:layout_margin="5dp">
 
@@ -14,11 +17,13 @@
 
 
         <TextView
+            android:id="@+id/genre_title"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:textColor="@color/darkBlue"
             android:textSize="12sp"
             android:textStyle="bold"
+            android:padding="5dp"
             tools:text="Action"/>
 
     </LinearLayout>
