--- a/app/src/main/res/layout/fragment_movie_search.xml
+++ b/app/src/main/res/layout/fragment_movie_search.xml
@@ -12,6 +12,8 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         app:layout_constraintTop_toTopOf="parent"
+        android:textColor="@color/white"
+        android:textColorHint="@color/white"
         android:hint="@string/search" />
 
     <androidx.recyclerview.widget.RecyclerView
