-swipe to delete added to favorites screen

--- a/app/src/main/res/layout/favorite_item.xml
+++ b/app/src/main/res/layout/favorite_item.xml
@@ -35,7 +35,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             app:layout_constraintStart_toEndOf="@id/movie_image"
-            android:textSize="15sp"
+            android:textSize="@dimen/text_medium"
             app:layout_constraintTop_toTopOf="parent"
             android:layout_margin="10dp"
             android:ellipsize="end"
@@ -48,7 +48,7 @@
             android:layout_height="wrap_content"
             app:layout_constraintTop_toBottomOf="@id/movie_name"
             app:layout_constraintStart_toStartOf="@id/movie_name"
-            android:textSize="15sp"
+            android:textSize="@dimen/text_medium"
             android:ellipsize="end"
             android:maxLines="1"
             tools:text="Action"/>
@@ -59,7 +59,7 @@
             android:layout_height="wrap_content"
             app:layout_constraintTop_toBottomOf="@id/fav_gener"
             app:layout_constraintStart_toStartOf="@id/movie_name"
-            android:textSize="15sp"
+            android:textSize="@dimen/text_medium"
             android:ellipsize="end"
             android:maxLines="1"
             tools:text="2012"/>
